luci-theme: alignment fixes
These help to align read-only items with their title elements.

(cherry picked from commit 7f0c172ee1a7a867cb61f404b3a5981c45158858)

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/mobile.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/mobile.css
@@ -172,6 +172,7 @@ header h3 a, header .brand {
 		border-bottom: 1px solid var(--border-color-high);
 		margin-bottom: .5em;
 		display: block;
+		align-items: baseline;
 	}
 
 	.cbi-value.hidden {
