--- a/themes/luci-theme-openwrt/htdocs/luci-static/openwrt.org/cascade.css
+++ b/themes/luci-theme-openwrt/htdocs/luci-static/openwrt.org/cascade.css
@@ -802,6 +802,7 @@ table td, table th {
 	vertical-align: middle;
 	padding: 0.25em 0.6em;
 	border-bottom: 1px dotted #bbbbbb;
+	align-items: baseline;
 }
 
 .cbi-value:hover {
